--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
         "axios": "^0.18",
         "bootstrap": "^4.2.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.3.1",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.22"
+        "vue": "^2.6.6"
     },
     "dependencies": {
         "ajv": "^6.7.0",
@@ -26,6 +26,7 @@
         "flatpickr": "^4.5.2",
         "imagemin": "^6.1.0",
         "jquery-ui": "^1.12.1",
-        "js-datepicker": "^4.0.10"
+        "js-datepicker": "^4.0.10",
+        "vue-template-compiler": "^2.6.6"
     }
 }
