--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.6.6"
+        "vue": "^2.6.8",
+        "vue-axios": "^2.1.4",
+        "vue-loader": "^15.7.0",
+        "vue-router": "^3.0.2",
+        "vue-template-compiler": "^2.6.8"
     },
     "dependencies": {
         "ajv": "^6.7.0",
@@ -26,7 +30,6 @@
         "flatpickr": "^4.5.2",
         "imagemin": "^6.1.0",
         "jquery-ui": "^1.12.1",
-        "js-datepicker": "^4.0.10",
-        "vue-template-compiler": "^2.6.6"
+        "js-datepicker": "^4.0.10"
     }
 }
