--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.2.1",
+        "bootstrap": "^4.3.1",
         "cross-env": "^5.1",
         "jquery": "^3.3.1",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^2.1.14",
         "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "popper.js": "^1.14.7",
         "vue": "^2.6.8",
-        "vue-axios": "^2.1.4",
-        "vue-loader": "^15.7.0",
-        "vue-router": "^3.0.2",
         "vue-template-compiler": "^2.6.8"
     },
     "dependencies": {
-        "ajv": "^6.7.0",
+        "ajv": "^6.10.0",
         "bootstrap-datepicker": "^1.8.0",
         "datepicker": "0.0.0",
-        "flatpickr": "^4.5.2",
+        "flatpickr": "^4.5.7",
         "imagemin": "^6.1.0",
         "jquery-ui": "^1.12.1",
-        "js-datepicker": "^4.0.10"
+        "js-datepicker": "^4.0.10",
+        "vue-router": "^3.0.2",
+        "vuetify": "^1.5.5"
     }
 }
